# de-smart_qa

./: .gitignore  README.md  file.txt  main.py  pyproject.toml
src/smart_qa/: client.py
tests/: conftest.py  test_client.py
